changed var to let and const, rearranged dropdown, fixed broken styles

--- a/pkg/networkmanager/networking.css
+++ b/pkg/networkmanager/networking.css
@@ -71,14 +71,6 @@ body {
     height: 120px;
 }
 
-#networking-interfaces {
-    min-height: 300px;
-}
-
-th.networking-speed {
-    width: 30%;
-}
-
 th.networking-spacer {
     width: 10em;
 }
